// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Blob router > 'getByBlobId' > should fail when getting a blob and the blob data is not available > [TRPCError: Failed to get blob from any of the storages: ] 1`] = `[TRPCError: Failed to get blob from any of the storages: ]`;

exports[`Blob router > 'getByBlobId' > should fail when trying to get a blob by a non-existent hash > [TRPCError: No blob with versioned hash or kzg commitment 'nonExistingHash'.] 1`] = `[TRPCError: No blob with versioned hash or kzg commitment 'nonExistingHash'.]`;

exports[`Blob router > 'getByBlobId' > should get a blob by kzg commitment 1`] = `
{
  "commitment": "commitment004",
  "data": "0xd76df869b71d79f835db7e39ebbf3d69b71d7e",
  "proof": "proof004",
  "size": 1300,
  "versionedHash": "blobHash004",
}
`;

exports[`Blob router > 'getByBlobId' > should get a blob by versioned hash 1`] = `
{
  "commitment": "commitment004",
  "data": "0xd76df869b71d79f835db7e39ebbf3d69b71d7e",
  "proof": "proof004",
  "size": 1300,
  "versionedHash": "blobHash004",
}
`;

exports[`Blob router > 'getByBlobIdFull' > should fail when getting a blob and the blob data is not available > [TRPCError: Failed to get blob from any of the storages: ] 1`] = `[TRPCError: Failed to get blob from any of the storages: ]`;

exports[`Blob router > 'getByBlobIdFull' > should fail when trying to get a blob by a non-existent hash > [TRPCError: No blob with versioned hash or kzg commitment 'nonExistingHash'.] 1`] = `[TRPCError: No blob with versioned hash or kzg commitment 'nonExistingHash'.]`;

exports[`Blob router > 'getByBlobIdFull' > should get a blob by kzg commitment 1`] = `
{
  "commitment": "commitment004",
  "data": "0xd76df869b71d79f835db7e39ebbf3d69b71d7e",
  "dataStorageReferences": [
    {
      "blobStorage": "POSTGRES",
      "dataReference": "blobHash004",
    },
    {
      "blobStorage": "GOOGLE",
      "dataReference": "7011893058/ob/Ha/sh/obHash004.txt",
    },
  ],
  "proof": "proof004",
  "size": 1300,
  "transactions": [
    {
      "txHash": "txHash004",
    },
    {
      "txHash": "txHash015",
    },
    {
      "txHash": "txHash015",
    },
    {
      "txHash": "txHash015",
    },
  ],
  "versionedHash": "blobHash004",
}
`;

exports[`Blob router > 'getByBlobIdFull' > should get a blob by versioned hash 1`] = `
{
  "commitment": "commitment004",
  "data": "0xd76df869b71d79f835db7e39ebbf3d69b71d7e",
  "dataStorageReferences": [
    {
      "blobStorage": "POSTGRES",
      "dataReference": "blobHash004",
    },
    {
      "blobStorage": "GOOGLE",
      "dataReference": "7011893058/ob/Ha/sh/obHash004.txt",
    },
  ],
  "proof": "proof004",
  "size": 1300,
  "transactions": [
    {
      "txHash": "txHash004",
    },
    {
      "txHash": "txHash015",
    },
    {
      "txHash": "txHash015",
    },
    {
      "txHash": "txHash015",
    },
  ],
  "versionedHash": "blobHash004",
}
`;

exports[`Blob router > getAll > when getting paginated blob results > should default to the first page when no page was specified 1`] = `
[
  {
    "commitment": "0xb4f67eb0771fbbf1b06b88ce0e23383daf994320508d44dd30dbd507f598c0d9b3da5a152e41a0428375060c3803b983",
    "proof": "89cf91c4c8be6f2a390d4262425f79dffb74c174fb15a210182184543bf7394e5a7970a774ee8e0dabc315424c22df0f",
    "size": 1500,
    "versionedHash": "0x010001c79d78a76fb9b4bab3896ee3ea32f3e2607da7801eb1a92da39d6c1368",
  },
  {
    "commitment": "commitment001",
    "proof": "proof001",
    "size": 1000,
    "versionedHash": "blobHash001",
  },
]
`;

exports[`Blob router > getAll > when getting paginated blob results > should return the correct number of results 1`] = `
[
  {
    "commitment": "0xb4f67eb0771fbbf1b06b88ce0e23383daf994320508d44dd30dbd507f598c0d9b3da5a152e41a0428375060c3803b983",
    "proof": "89cf91c4c8be6f2a390d4262425f79dffb74c174fb15a210182184543bf7394e5a7970a774ee8e0dabc315424c22df0f",
    "size": 1500,
    "versionedHash": "0x010001c79d78a76fb9b4bab3896ee3ea32f3e2607da7801eb1a92da39d6c1368",
  },
  {
    "commitment": "commitment001",
    "proof": "proof001",
    "size": 1000,
    "versionedHash": "blobHash001",
  },
]
`;

exports[`Blob router > getByBlobId > should get a blob by kzg commitment 1`] = `
{
  "commitment": "commitment004",
  "data": "0xd76df869b71d79f835db7e39ebbf3d69b71d7e",
  "dataStorageReferences": [
    {
      "blobStorage": "POSTGRES",
      "dataReference": "blobHash004",
    },
    {
      "blobStorage": "GOOGLE",
      "dataReference": "7011893058/ob/Ha/sh/obHash004.txt",
    },
  ],
  "proof": "proof004",
  "size": 1300,
  "versionedHash": "blobHash004",
}
`;

exports[`Blob router > getByBlobId > should get a blob by versioned hash 1`] = `
{
  "commitment": "commitment004",
  "data": "0xd76df869b71d79f835db7e39ebbf3d69b71d7e",
  "dataStorageReferences": [
    {
      "blobStorage": "POSTGRES",
      "dataReference": "blobHash004",
    },
    {
      "blobStorage": "GOOGLE",
      "dataReference": "7011893058/ob/Ha/sh/obHash004.txt",
    },
  ],
  "proof": "proof004",
  "size": 1300,
  "versionedHash": "blobHash004",
}
`;
